# mp3-to-sp

./: .gitignore  README.md  main.py  pyproject.toml
src/: auth.py  match.py  playlist.py  scan.py
